# urigin-engine

./: .gitignore  CMakeLists.txt  build.zig
src/: events.c  main.c  origin.h  renderer.c  setup.c  update.c  urigin.h  window-utils.c
